--- a/test/emailer.properties
+++ b/test/emailer.properties
@@ -1,4 +1,4 @@
 sendEmail=true
 emailOverride=
-emailServ=exchange.hosp.wisc.edu
+emailServ=your.server.somewhere.com
 defaultFrom=no-reply@yourco.com
